[package]
name = "run_for_fun"
version = "0.2.3"
authors = ["Rogue Shadow <adam@granseal.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "olc_code_jam_2024_lib"

[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
        "animation",
        "bevy_asset",
        "bevy_state",
        #"bevy_audio",
        "bevy_color",
        "bevy_gilrs",
        #"bevy_scene",
        "bevy_winit",
        "bevy_core_pipeline",
        "bevy_pbr",
        #"bevy_gltf",
        "bevy_render",
        "bevy_sprite",
        "bevy_text",
        "bevy_ui",
        "multi_threaded",
        "png",
        "hdr",
        #"vorbis",
        #"x11",
        "bevy_gizmos",
        #"android_shared_stdcxx",
        "tonemapping_luts",
        "smaa_luts",
        "default_font",
        "webgl2",
        "sysinfo_plugin",
    ]

[dependencies]
wasm-bindgen = "0.2.93"
iyes_perf_ui = { version = "0.3.0", features = [] }
bevy_reflect = "0.14.2"
rand = "0.8.5"
bevy_ecs_tilemap = "0.14.0"
bevy_ecs_ldtk = "0.10.0"
bevy_rapier2d = { version = "0.27.0", features = ["wasm-bindgen", "debug-render-2d"]}
log = "0.4.22"
num-traits = "0.2.19"
itertools = "0.13.0"
bevy-inspector-egui = { version = "0.25.2", default-features = false, features = ["bevy_pbr", "bevy_render","egui_open_url"] }
#bevy-inspector-egui-rapier = "0.9.0"
bevy_kira_audio = { version = "0.20.0", features = ["wav","mp3"] }
bevy_asset_loader = {version = "0.21.0"}

[profile.dev]


[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

